--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --verbose --forceExit --detectOpenHandles",
     "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",
+    "start": "cross-env NODE_ENV=production node index.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev index.ts",
     "lint": "eslint --ext .ts ."
   },
   "author": "",
@@ -15,6 +16,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "dotenv": "^16.0.3",
@@ -30,5 +32,9 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^6.8.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "preset": "ts-jest"
   }
 }
