--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/mongoose": "^5.11.97",
+    "@types/mongoose-unique-validator": "^1.0.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
@@ -31,7 +32,8 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "jest": {
     "testEnvironment": "node",
