--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,21 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-big-calendar": "^1.6.4",
     "@types/react-datepicker": "^4.11.2",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
