--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "@types/luxon": "^3.3.1",
