--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
-    "sass": "^1.64.1"
+    "sass": "^1.64.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/luxon": "^3.3.1",
