Changed compose structure, added bash script to run tests in easy way

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --verbose --forceExit --detectOpenHandles",
     "tsc": "tsc",
-    "start": "cross-env NODE_ENV=production node index.ts",
+    "start": "cross-env NODE_ENV=production node build/index.js",
+    "start:test": "cross-env NODE_ENV=test ts-node-dev index.ts",
     "dev": "cross-env NODE_ENV=development ts-node-dev index.ts",
     "lint": "eslint --ext .ts ."
   },
