--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,6 @@
 version: '3.8'
 
 services:
-  mongo:
-    image: mongo
-    ports:
-      - 4000:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-      MONGO_INITDB_DATABASE: the_database
-    volumes:
-      - /data/db
-      - ./backend/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
   app:
     image: study-front-prod
     build:
@@ -26,10 +15,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     environment:
-      - MONGODB_URI=mongodb://the_username:the_password@mongo:27017/the_database
-      - MONGODB_URI_TEST=mongodb://the_username:the_password@mongo:27017/test?authSource=the_database
-    depends_on:
-      - mongo
+      - MONGODB_URI=${MONGODB_URI}
+      - MONGODB_URI_TEST=${MONGODB_URI_TEST}
   nginx:
     image: nginx:1.20.1-alpine
     volumes:
