--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
     }
 
     location /api/ {
-      proxy_pass http://server:3000/;
+      proxy_pass http://server:3000/api/;
     }
   }
 }
